--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -38,7 +39,24 @@ android {
     }
 }
 
+kapt {
+    correctErrorTypes true
+}
+
 dependencies {
+
+    // Dagger-Hilt
+    implementation 'com.google.dagger:hilt-android:2.34.1-beta'
+    kapt 'com.google.dagger:hilt-compiler:2.34.1-beta'
+
+    // Dagger-Hilt Test
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.34.1-beta'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.34.1-beta'
+
+    // Dagger-Hilt Local Unit Test
+    testImplementation 'com.google.dagger:hilt-android-testing:2.34.1-beta'
+    kaptTest 'com.google.dagger:hilt-compiler:2.34.1-beta'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -61,12 +79,12 @@ dependencies {
     implementation "org.koin:koin-androidx-fragment:$koin_version"
 
     //Lifecycle Component
-    def livedata_version = '2.3.0'
+    def livedata_version = '2.3.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$livedata_version"
 
     //Room
-    def room_version = '2.2.6'
+    def room_version = '2.3.0'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
