--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,18 +46,17 @@ kapt {
 dependencies {
 
     // Dagger-Hilt
-    implementation 'com.google.dagger:hilt-android:2.34.1-beta'
-    kapt 'com.google.dagger:hilt-compiler:2.34.1-beta'
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // Dagger-Hilt Test
-    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.34.1-beta'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.34.1-beta'
+    androidTestImplementation  "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:$hilt_version"
 
     // Dagger-Hilt Local Unit Test
-    testImplementation 'com.google.dagger:hilt-android-testing:2.34.1-beta'
-    kaptTest 'com.google.dagger:hilt-compiler:2.34.1-beta'
+    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptTest "com.google.dagger:hilt-compiler:$hilt_version"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -70,13 +69,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    //Koin
-    def koin_version = '2.2.2'
-    implementation "org.koin:koin-core:$koin_version"
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    implementation "org.koin:koin-androidx-fragment:$koin_version"
 
     //Lifecycle Component
     def livedata_version = '2.3.1'
@@ -95,12 +87,12 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     //Coroutine
-    def coroutine_version = '1.4.3-native-mt'
+    def coroutine_version = '1.4.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
 
     //Paging
-    implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
 
     //Retrofit
     def retrofit_version = '2.9.0'
@@ -113,7 +105,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // Moshi
-    def moshi_version = '1.11.0'
+    def moshi_version = '1.12.0'
     implementation "com.squareup.moshi:moshi:$moshi_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
