--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,10 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    // Fragment
+    def fragment_version = "1.3.4"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //Lifecycle Component
