--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Fragment
-    def fragment_version = "1.3.4"
+    def fragment_version = "1.3.5"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -78,6 +78,9 @@ dependencies {
     def livedata_version = '2.3.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$livedata_version"
+
+    // View Pager 2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     //Room
     def room_version = '2.3.0'
